WebVR: match GVR renderbuffer resolution to canvas resolution

This is a partial revert of the VrShellGl refactor r438256 aka
http://crrev.com/2562733002 which had commented out this resolution
change.

Matching resolution improves visual quality and performance, the
internal rendering was at 3606x2268 instead of the intended 2560x1440
on a Pixel XL.

(This is a manual bugfix, basically a partial revert of 0be372f1b41a7e7ad897743abd6b265da979a82e or equivalently a partial cherry pick of 362c621af1b1c9ad8da5bac607a082108b4aa213, as approved by amineer@. Please see bug for details.)

BUG=704364
NOTRY=true
NOPRESUBMIT=true

Review-Url: https://codereview.chromium.org/2775513002
Cr-Commit-Position: refs/branch-heads/3029@{#402}
Cr-Branched-From: 939b32ee5ba05c396eef3fd992822fcca9a2e262-refs/heads/master@{#454471}